@@ -59,16 +59,18 @@ dnssrv_back_referrals(
 		rs->sr_err = LDAP_REFERRAL;
 		rs->sr_ref = default_referral;
 		send_ldap_result( op, rs );
+		rs->sr_ref = NULL;
 		return LDAP_REFERRAL;
 	}
 
 	Debug( LDAP_DEBUG_TRACE, "DNSSRV: dn=\"%s\" -> domain=\"%s\"\n",
 		op->o_req_dn.bv_val, domain, 0 );
 
-	if( ( rc = ldap_domain2hostlist( domain, &hostlist ) ) ) {
+	i = ldap_domain2hostlist( domain, &hostlist );
+	if ( i ) {
 		Debug( LDAP_DEBUG_TRACE,
 			"DNSSRV: domain2hostlist(%s) returned %d\n",
-			domain, rc, 0 );
+			domain, i, 0 );
 		rs->sr_text = "no DNS SRV RR available for DN";
 		rc = LDAP_NO_SUCH_OBJECT;
 		goto done;
@@ -109,6 +111,8 @@ dnssrv_back_referrals(
 	rs->sr_ref = urls;
 	send_ldap_error( op, rs, LDAP_REFERRAL,
 		"DNS SRV generated referrals" );
+	rs->sr_ref = NULL;
+	rc = LDAP_REFERRAL;
 
 done:
 	if( domain != NULL ) ch_free( domain );
